fix final text being too large on some viewport sizes

--- a/styles.scss
+++ b/styles.scss
@@ -193,7 +193,7 @@ $dial-1-width: 6vmin;
 }
 
 .text-box.final {
-  font-size: 5vmin;
+  font-size: 4vmin;
 }
 
 @media (orientation: 'portrait') {
